-- ------------------------------------------------------------
-- Table: mpa_rating
-- ------------------------------------------------------------
CREATE TABLE IF NOT EXISTS mpa_rating (
    mpa_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name   VARCHAR NOT NULL UNIQUE
);

-- ------------------------------------------------------------
-- Table: users
-- ------------------------------------------------------------
CREATE TABLE IF NOT EXISTS users (
    user_id  BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name     VARCHAR,
    login    VARCHAR NOT NULL UNIQUE,
    email    VARCHAR NOT NULL UNIQUE,
    birthday DATE
);

-- ------------------------------------------------------------
-- Table: films
-- ------------------------------------------------------------
CREATE TABLE IF NOT EXISTS films (
    film_id      BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name         VARCHAR NOT NULL,
    description  VARCHAR(200),
    release_date DATE,
    duration     INT NOT NULL,
    mpa          INT,
    CONSTRAINT fk_films_mpa FOREIGN KEY (mpa)
        REFERENCES mpa_rating(mpa_id)
);

-- ------------------------------------------------------------
-- Table: genres
-- ------------------------------------------------------------
CREATE TABLE IF NOT EXISTS genres (
    genre_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name     VARCHAR NOT NULL UNIQUE
);

-- ------------------------------------------------------------
-- Table: film_genres
-- ------------------------------------------------------------
CREATE TABLE IF NOT EXISTS film_genres (
    film_genres_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    film_id        BIGINT NOT NULL,
    genre_id       INT NOT NULL,

    CONSTRAINT fk_film_genres_film FOREIGN KEY (film_id)
        REFERENCES films(film_id),
    CONSTRAINT fk_film_genres_genre FOREIGN KEY (genre_id)
        REFERENCES genres(genre_id)
);

CREATE UNIQUE INDEX IF NOT EXISTS idx_film_genre_pair
    ON film_genres(film_id, genre_id);

-- ------------------------------------------------------------
-- Table: friendships
-- ------------------------------------------------------------
CREATE TABLE IF NOT EXISTS friendships (
    friendship_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id  BIGINT NOT NULL,
    friend_id BIGINT NOT NULL,

    CONSTRAINT fk_friendships_user FOREIGN KEY (user_id)
        REFERENCES users(user_id),
    CONSTRAINT fk_friendships_friend FOREIGN KEY (friend_id)
        REFERENCES users(user_id)
);

CREATE UNIQUE INDEX IF NOT EXISTS idx_friendship_pair
    ON friendships(user_id, friend_id);

-- ------------------------------------------------------------
-- Table: likes
-- ------------------------------------------------------------
CREATE TABLE IF NOT EXISTS likes (
    like_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL,
    film_id BIGINT NOT NULL,

    CONSTRAINT fk_likes_user FOREIGN KEY (user_id)
        REFERENCES users(user_id),
    CONSTRAINT fk_likes_film FOREIGN KEY (film_id)
        REFERENCES films(film_id)
);

CREATE UNIQUE INDEX IF NOT EXISTS idx_like_pair
    ON likes(user_id, film_id);
